File refactors and more tijuana testing

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -28,6 +28,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
+    "from utils import create_path\n",
     "from parcels_utils import xr_dataset_to_fieldset"
    ]
   },
@@ -95,7 +96,8 @@
    "source": [
     "region_data = [\n",
     "    (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
-    "    (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11))\n",
+    "    (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
+    "    (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
     "]"
    ]
   },
@@ -124,14 +126,11 @@
    "outputs": [],
    "source": [
     "for r in regions:\n",
-    "    save_dir = filename_dict[r[\"category\"]] + \"_netcdfs/\"\n",
-    "    if not os.path.exists(save_dir):\n",
-    "        os.mkdir(save_dir)\n",
-    "        print(f\"created new directory {save_dir}\")\n",
-    "    filename = filename_dict[r['category']] + f\"_region_{r['name']}.nc\"\n",
+    "    save_dir = create_path(\"current_netcdfs/\" + filename_dict[r[\"category\"]])\n",
+    "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
-    "    r[\"dataset\"].to_netcdf(save_dir + filename)\n",
-    "    print(f\"saved to {save_dir + filename}\")\n",
+    "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
+    "    print(f\"saved to {save_dir / filename}\")\n",
     "print(\"done\")"
    ]
   },
@@ -157,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "netcdf_filename = \"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\"\n",
+    "netcdf_filename = \"current_netcdfs/west_coast_1km_hourly/tijuana_river_small.nc\"\n",
     "ds = xr.open_dataset(netcdf_filename)\n",
     "fs = xr_dataset_to_fieldset(ds)\n",
     "ds.close()\n",
