--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -89,11 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(\"west_coast_1km_hourly_netcdfs/west_coast_1km_hourly_region_tijuana_river.nc\", 1, name=\"target\")\n",
+    "target = get_file_info(\"current_netcdfs/west_coast_1km_hourly/tijuana_river.nc\", 1, name=\"target\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(\"west_coast_2km_hourly_netcdfs/west_coast_2km_hourly_region0.nc\", 2, name=\"ref2km\"),\n",
-    "    get_file_info(\"west_coast_6km_hourly_netcdfs/west_coast_6km_hourly_region0.nc\", 6, name=\"ref6km\")\n",
+    "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/region0.nc\", 2, name=\"ref2km\"),\n",
+    "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/region0.nc\", 6, name=\"ref6km\")\n",
     "]"
    ]
   },
@@ -233,7 +233,7 @@
     "    current = current_u + current_v\n",
     "    # TODO: testing whether `current == 0` actually helps or not\n",
     "    # basically makes interpolation a bit more \"aggressive\"?\n",
-    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]) and current == 0:\n",
+    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]):\n",
     "        return np.nan, np.nan\n",
     "    return current_u, current_v"
    ]
