--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -66,10 +66,12 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"parcels_configs/tijuana_lin_cfg.json\",\n",
-    "#     \"parcels_configs/tijuana_simpterp_cfg.json\",\n",
-    "#     \"parcels_configs/tijuana_lin_aggr_cfg.json\",\n",
-    "    \"parcels_configs/tijuana_less_cfg.json\"\n",
+    "#     \"parcels_configs/tijuana_lin.json\",\n",
+    "#     \"parcels_configs/tijuana_simpterp.json\",\n",
+    "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
+    "    \"parcels_configs/tijuana_less.json\",\n",
+    "#     \"parcels_configs/tijuana_small.json\",\n",
+    "#     \"parcels_configs/tijuana_smallreally.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
@@ -127,8 +129,12 @@
     "        # because right now can't do both\n",
     "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
     "#         data[\"pset\"].show(savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad), field=\"vector\", vmax=max_v)\n",
-    "        fi = None if ages else \"vector\"\n",
-    "        plot_particles_age(data[\"pset\"], data[\"domain\"], field=fi,\n",
+    "        field = None if ages else \"vector\"\n",
+    "        if \"shown_domain\" in data[\"cfg\"]:\n",
+    "            dom = data[\"cfg\"][\"shown_domain\"]\n",
+    "        else:\n",
+    "            dom = data[\"domain\"]\n",
+    "        plot_particles_age(data[\"pset\"], dom, field=field,\n",
     "                           savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad),\n",
     "                           vmax=days, field_vmax=max_v)\n",
     "    \n",
@@ -230,7 +236,7 @@
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 1}\")\n",
     "    else:\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
-    "    f[\"snap_path\"] = create_path(f\"snapshots_{utils.filename_dict[f['res']]}/{f['name']}\")\n",
+    "    f[\"snap_path\"] = create_path(f\"snapshots/{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
     "    # only clear directory if desired or actually saving images\n",
     "    if cfg[\"save_snapshots\"]:\n",
@@ -254,7 +260,7 @@
    "outputs": [],
    "source": [
     "# show age or not (temporary)\n",
-    "age = True\n",
+    "age = False\n",
     "# execution of simulation\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
@@ -288,7 +294,7 @@
     "\n",
     "don't have to run, requires [magick](https://imagemagick.org/index.php)\n",
     "\n",
-    "the gifs will be saved `snapshots_west_coast_xkm_hourly/` where xkm is the resolution"
+    "the gifs will be saved `snapshots/west_coast_xkm_hourly/` where xkm is the resolution"
    ]
   },
   {
@@ -307,7 +313,7 @@
     "            [\n",
     "                \"magick\", \"-delay\", str(gif_delay),\n",
     "                str(f[\"snap_path\"]) + \"/*.png\", # path to the snapshots to stitch\n",
-    "                f\"snapshots_{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
+    "                f\"snapshots/{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
     "            ],\n",
     "            stdout=subprocess.PIPE,\n",
     "            stderr=subprocess.PIPE,\n",
