--- a/particle_interp_compare.ipynb
+++ b/particle_interp_compare.ipynb
@@ -44,13 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir1km = \"west_coast_1km_hourly_netcdfs/\"\n",
+    "dir1km = \"current_netcdfs/west_coast_1km_hourly/\"\n",
     "\n",
     "files = [\n",
-    "    get_file_info(dir1km + \"west_coast_1km_hourly_region_tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\"),\n",
-    "    get_file_info(dir1km + \"west_coast_1km_hourly_region_tijuana_river_lin.nc\", 1, name=\"lin\"),\n",
-    "    get_file_info(dir1km + \"west_coast_1km_hourly_region_tijuana_river_simpterp.nc\", 1, name=\"simp\"),\n",
-    "    get_file_info(dir1km + \"west_coast_1km_hourly_region_tijuana_river_invdist.nc\", 1, name=\"invd\")\n",
+    "#     get_file_info(dir1km + \"tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\"),\n",
+    "    get_file_info(dir1km + \"tijuana_river_lin.nc\", 1, name=\"lin\"),\n",
+    "#     get_file_info(dir1km + \"tijuana_river_simpterp.nc\", 1, name=\"simp\"),\n",
+    "#     get_file_info(dir1km + \"tijuana_river_invdist.nc\", 1, name=\"invd\")\n",
     "]"
    ]
   },
@@ -78,12 +78,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = files[0][\"xrds\"][\"time\"].min().values\n",
     "end_time = files[0][\"xrds\"][\"time\"].max().values\n",
     "spawn_time = np.datetime64(\"2020-06-17T09:00:00\")\n",
-    "seconds_delta = (spawn_time - start_time) / np.timedelta64(1, \"s\")\n",
     "spawn_loc = (32.551707, -117.138)  # (lat, lon)\n",
     "simulation_dt = timedelta(minutes=5)\n",
+    "out_dt = timedelta(hours=1)\n",
     "save_dir = create_path(\"particledata/testcompare\")\n",
     "\n",
     "def DeleteParticle(particle, fieldset, time):\n",
@@ -99,7 +98,7 @@
     "for f in files:\n",
     "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=JITParticle, lon=[spawn_loc[1]], lat=[spawn_loc[0]], time=[spawn_time])\n",
     "    save_path = f\"{save_dir}/{f['name']}.nc\"\n",
-    "    f[\"pfile\"] = f[\"pset\"].ParticleFile(save_path, outputdt=timedelta(hours=1))\n",
+    "    f[\"pfile\"] = f[\"pset\"].ParticleFile(save_path, outputdt=out_dt)\n",
     "    \n",
     "    f[\"pset\"].execute(\n",
     "                AdvectionRK4,\n",
@@ -128,8 +127,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(files[0][\"domain\"])\n",
+    "mod_domain = {\n",
+    "    'S': 32.53346,\n",
+    "    'N': 32.6,\n",
+    "    'W': -117.19,\n",
+    "    'E': -117.11733\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ps = [f[\"pfile\"].name for f in files]\n",
-    "plot_trajectories(ps, files[0][\"domain\"])"
+    "plot_trajectories(ps, mod_domain)"
    ]
   }
  ],
