More trajectory comparisons

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -105,11 +105,7 @@
     "\n",
     "more information can be found in the `tutorial_interpolation` notebook\n",
     "\n",
-    "it's mostly finding whether `linear` or `linear_invdist_land_tracer` works better\n",
-    "\n",
-    "FUN FACT: parcels lets you change the interp method for U and V fields to `linear_invdist_land_tracer` and even access values from it, but doesn't work when you stick the FieldSet into a ParticleSet.\n",
-    "\n",
-    "maybe this means `linear_invdist_land_tracer` shouldn't be used for velocity interpolation?"
+    "EDIT: just use `linear`"
    ]
   },
   {
@@ -119,7 +115,6 @@
    "outputs": [],
    "source": [
     "reference_interp_method = \"linear\"\n",
-    "# reference_interp_method = \"linear_invdist_land_tracer\"\n",
     "\n",
     "for r in interp_references:\n",
     "    r[\"fs_flat\"].U.interp_method = reference_interp_method\n",
