--- a/particle_interp_compare.ipynb
+++ b/particle_interp_compare.ipynb
@@ -31,7 +31,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile\n",
+    "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile, ParticleFile\n",
     "\n",
     "from utils import create_path\n",
     "from parcels_utils import get_file_info\n",
@@ -47,11 +47,17 @@
     "dir1km = \"current_netcdfs/west_coast_1km_hourly/\"\n",
     "\n",
     "files = [\n",
-    "#     get_file_info(dir1km + \"tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\"),\n",
     "    get_file_info(dir1km + \"tijuana_river_lin.nc\", 1, name=\"lin\"),\n",
+    "    get_file_info(dir1km + \"tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\"),\n",
     "#     get_file_info(dir1km + \"tijuana_river_simpterp.nc\", 1, name=\"simp\"),\n",
-    "#     get_file_info(dir1km + \"tijuana_river_invdist.nc\", 1, name=\"invd\")\n",
-    "]"
+    "    get_file_info(dir1km + \"tijuana_river_invdist.nc\", 1, name=\"invd\")\n",
+    "]\n",
+    "\n",
+    "st = files[0][\"timerng\"][0]\n",
+    "ed = files[0][\"timerng\"][1]\n",
+    "for f in files:\n",
+    "    assert f[\"timerng\"][0] == st\n",
+    "    assert f[\"timerng\"][1] == ed"
    ]
   },
   {
@@ -60,27 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(files[0][\"xrds\"][\"time\"].max().values - np.datetime64(\"2020-06-17T09:00:00\")) / np.timedelta64(1, 's')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(np.datetime64(\"2020-06-17T09:00:00\") - files[0][\"xrds\"][\"time\"].min().values) / np.timedelta64(1, 's')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "end_time = files[0][\"xrds\"][\"time\"].max().values\n",
+    "end_time = files[0][\"timerng\"][1]\n",
     "spawn_time = np.datetime64(\"2020-06-17T09:00:00\")\n",
-    "spawn_loc = (32.551707, -117.138)  # (lat, lon)\n",
+    "spawn_locs = [\n",
+    "    (32.551707, -117.138),\n",
+    "    (32.557, -117.135)\n",
+    "]  # (lat, lon)\n",
     "simulation_dt = timedelta(minutes=5)\n",
     "out_dt = timedelta(hours=1)\n",
     "save_dir = create_path(\"particledata/testcompare\")\n",
@@ -90,25 +81,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for f in files:\n",
-    "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=JITParticle, lon=[spawn_loc[1]], lat=[spawn_loc[0]], time=[spawn_time])\n",
-    "    save_path = f\"{save_dir}/{f['name']}.nc\"\n",
-    "    f[\"pfile\"] = f[\"pset\"].ParticleFile(save_path, outputdt=out_dt)\n",
-    "    \n",
-    "    f[\"pset\"].execute(\n",
-    "                AdvectionRK4,\n",
-    "                endtime=end_time,\n",
-    "                dt=simulation_dt,\n",
-    "                recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
-    "                output_file=f[\"pfile\"]\n",
-    "            )\n",
-    "    f[\"pfile\"].export()\n",
-    "    f[\"pfile\"].close()"
+    "now i could just stuff everything into a single ParticleSet for every different spawn location\n",
+    "\n",
+    "but then it becomes annoying to filter out ones that start at a specific location"
    ]
   },
   {
@@ -117,8 +95,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_ds = xr.open_dataset(files[0][\"pfile\"].name)\n",
-    "p_ds"
+    "for f in files:\n",
+    "    f[\"psets\"] = np.empty(len(spawn_locs), dtype=ParticleSet)\n",
+    "    f[\"pfiles\"] = np.empty(len(spawn_locs), dtype=ParticleFile)\n",
+    "    \n",
+    "    for i in range(len(spawn_locs)):\n",
+    "        f[\"psets\"][i] = ParticleSet(fieldset=f[\"fs\"], pclass=JITParticle, lon=[spawn_locs[i][1]], lat=[spawn_locs[i][0]], time=[spawn_time])\n",
+    "        save_path = f\"{save_dir}/{f['name']}{i}.nc\"\n",
+    "        f[\"pfiles\"][i] = f[\"psets\"][i].ParticleFile(save_path, outputdt=out_dt)\n",
+    "\n",
+    "        f[\"psets\"][i].execute(\n",
+    "                    AdvectionRK4,\n",
+    "                    endtime=end_time,\n",
+    "                    dt=simulation_dt,\n",
+    "                    recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
+    "                    output_file=f[\"pfiles\"][i]\n",
+    "                )\n",
+    "        f[\"pfiles\"][i].export()\n",
+    "        f[\"pfiles\"][i].close()"
    ]
   },
   {
@@ -129,11 +123,17 @@
    "source": [
     "print(files[0][\"domain\"])\n",
     "mod_domain = {\n",
-    "    'S': 32.53346,\n",
-    "    'N': 32.6,\n",
-    "    'W': -117.19,\n",
-    "    'E': -117.11733\n",
-    "}"
+    "    'S': 32.545,\n",
+    "    'N': 32.585,\n",
+    "    'W': -117.158,\n",
+    "    'E': -117.13\n",
+    "}\n",
+    "# mod_domain = {\n",
+    "#     'S': 32.5495,\n",
+    "#     'N': 32.555,\n",
+    "#     'W': -117.15,\n",
+    "#     'E': -117.135\n",
+    "# }"
    ]
   },
   {
@@ -142,8 +142,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ps = [f[\"pfile\"].name for f in files]\n",
-    "plot_trajectories(ps, mod_domain)"
+    "for i in range(len(spawn_locs)):\n",
+    "    ps = np.array([f[\"pfiles\"][i].name for f in files])\n",
+    "    print(f\"starting at (lat, lon) {spawn_locs[i]}\")\n",
+    "    plot_trajectories(ps, mod_domain)"
    ]
   }
  ],
