More tweaks to trajectory comparisons

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -37,7 +37,7 @@
     "from datetime import timedelta\n",
     "\n",
     "import utils\n",
-    "from utils import load_config, create_path\n",
+    "from utils import load_config, create_path, add_noise\n",
     "from parcels_utils import get_file_info\n",
     "from plot_utils import plot_particles_age\n",
     "\n",
@@ -189,11 +189,8 @@
     "    sp_lat = cfg[\"spawn_points\"].T[0][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
     "    sp_lon = cfg[\"spawn_points\"].T[1][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
     "    # vary spawn locations using max_variation\n",
-    "    variances_lat = (np.random.random(total) * 2 - 1) * cfg[\"max_variation\"]\n",
-    "    variances_lon = (np.random.random(total) * 2 - 1) * cfg[\"max_variation\"]\n",
-    "\n",
-    "    p_lats = sp_lat + variances_lat\n",
-    "    p_lons = sp_lon + variances_lon\n",
+    "    p_lats = add_noise(sp_lat, cfg[\"max_variation\"])\n",
+    "    p_lons = add_noise(sp_lon, cfg[\"max_variation\"])\n",
     "\n",
     "    # set up ParticleSet and ParticleFile\n",
     "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=TimedParticle, lon=p_lons, lat=p_lats, time=time_arr)\n",
