--- a/particle_interp_compare.ipynb
+++ b/particle_interp_compare.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -33,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile, ParticleFile\n",
     "\n",
-    "from utils import create_path\n",
+    "from utils import create_path, add_noise\n",
     "from parcels_utils import get_file_info\n",
     "from plot_utils import plot_trajectories"
    ]
@@ -48,9 +50,7 @@
     "\n",
     "files = [\n",
     "    get_file_info(dir1km + \"tijuana_river_lin.nc\", 1, name=\"lin\"),\n",
-    "    get_file_info(dir1km + \"tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\"),\n",
-    "#     get_file_info(dir1km + \"tijuana_river_simpterp.nc\", 1, name=\"simp\"),\n",
-    "    get_file_info(dir1km + \"tijuana_river_invdist.nc\", 1, name=\"invd\")\n",
+    "    get_file_info(dir1km + \"tijuana_river_lin_aggr.nc\", 1, name=\"lin_aggr\")\n",
     "]\n",
     "\n",
     "st = files[0][\"timerng\"][0]\n",
@@ -66,12 +66,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do_sim = True\n",
     "end_time = files[0][\"timerng\"][1]\n",
+    "# this was the very specific spawn time for particles that collided with land\n",
     "spawn_time = np.datetime64(\"2020-06-17T09:00:00\")\n",
-    "spawn_locs = [\n",
-    "    (32.551707, -117.138),\n",
-    "    (32.557, -117.135)\n",
-    "]  # (lat, lon)\n",
+    "max_var = 0.003\n",
+    "spawn_loc_base = np.array([32.551707, -117.138]) # (lat, lon)\n",
+    "spawn_locs = add_noise(spawn_loc_base, max_var, repeat=20)\n",
     "simulation_dt = timedelta(minutes=5)\n",
     "out_dt = timedelta(hours=1)\n",
     "save_dir = create_path(\"particledata/testcompare\")\n",
@@ -92,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for f in files:\n",
@@ -102,17 +105,7 @@
     "    for i in range(len(spawn_locs)):\n",
     "        f[\"psets\"][i] = ParticleSet(fieldset=f[\"fs\"], pclass=JITParticle, lon=[spawn_locs[i][1]], lat=[spawn_locs[i][0]], time=[spawn_time])\n",
     "        save_path = f\"{save_dir}/{f['name']}{i}.nc\"\n",
-    "        f[\"pfiles\"][i] = f[\"psets\"][i].ParticleFile(save_path, outputdt=out_dt)\n",
-    "\n",
-    "        f[\"psets\"][i].execute(\n",
-    "                    AdvectionRK4,\n",
-    "                    endtime=end_time,\n",
-    "                    dt=simulation_dt,\n",
-    "                    recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
-    "                    output_file=f[\"pfiles\"][i]\n",
-    "                )\n",
-    "        f[\"pfiles\"][i].export()\n",
-    "        f[\"pfiles\"][i].close()"
+    "        f[\"pfiles\"][i] = f[\"psets\"][i].ParticleFile(save_path, outputdt=out_dt)"
    ]
   },
   {
@@ -121,7 +114,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(files[0][\"domain\"])\n",
+    "if do_sim:\n",
+    "    for f in files:\n",
+    "        for i in range(len(spawn_locs)):\n",
+    "            f[\"psets\"][i].execute(\n",
+    "                        AdvectionRK4,\n",
+    "                        endtime=end_time,\n",
+    "                        dt=simulation_dt,\n",
+    "                        recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
+    "                        output_file=f[\"pfiles\"][i]\n",
+    "                    )\n",
+    "            f[\"pfiles\"][i].export()\n",
+    "            f[\"pfiles\"][i].close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files[0][\"domain\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "mod_domain = {\n",
     "    'S': 32.545,\n",
     "    'N': 32.585,\n",
@@ -133,7 +156,18 @@
     "#     'N': 32.555,\n",
     "#     'W': -117.15,\n",
     "#     'E': -117.135\n",
-    "# }"
+    "# }\n",
+    "# mod_domain = {\n",
+    "#     'S': 32.575,\n",
+    "#     'N': 32.5766,\n",
+    "#     'W': -117.145,\n",
+    "#     'E': -117.140\n",
+    "# }\n",
+    "\n",
+    "for i in range(len(spawn_locs)):\n",
+    "    ps = np.array([f[\"pfiles\"][i].name for f in files])\n",
+    "    print(f\"starting at (lat, lon) {spawn_locs[i]}\")\n",
+    "#     plot_trajectories(ps, mod_domain)"
    ]
   },
   {
@@ -142,10 +176,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(spawn_locs)):\n",
-    "    ps = np.array([f[\"pfiles\"][i].name for f in files])\n",
-    "    print(f\"starting at (lat, lon) {spawn_locs[i]}\")\n",
-    "    plot_trajectories(ps, mod_domain)"
+    "for f in files:\n",
+    "    ps = np.array([p.name for p in f[\"pfiles\"]])\n",
+    "    print(f\"paths for {f['name']}\")\n",
+    "    plot_trajectories(ps, mod_domain, legend=False, scatter=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wack ass coordinates\n",
+    "\n",
+    "[  32.55096753 -117.13918667]\n",
+    "\n",
+    "[  32.55072813 -117.13842626]"
    ]
   }
  ],
