Quick test with most recent data

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -70,7 +72,26 @@
     "            \"W\": lon_range[0],\n",
     "            \"E\": lon_range[1],\n",
     "        }\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "def get_latest_span(delta):\n",
+    "    # GMT, data recorded hourly\n",
+    "    time_now = np.datetime64(\"now\", \"h\")\n",
+    "    return (time_now - delta, time_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region_data = [\n",
+    "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
+    "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
+    "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
+    "    (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(7, \"D\")), (32.528, 32.71), (-117.29, -117.11))\n",
+    "]"
    ]
   },
   {
@@ -81,24 +102,25 @@
    "source": [
     "num_chunks = 50\n",
     "\n",
-    "thredds_data = {\n",
-    "    DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
-    "    DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
-    "    DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "region_data = [\n",
-    "    (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
-    "    (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
-    "    (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
-    "]"
+    "# thredds_data = {\n",
+    "#     DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
+    "#     DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
+    "#     DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
+    "# }\n",
+    "\n",
+    "thredds_data = {}\n",
+    "\n",
+    "# lol\n",
+    "# so it doesnt have to slowly load every dataset very slowly if not needed\n",
+    "for rd in region_data:\n",
+    "    res = rd[1]\n",
+    "    if res not in thredds_data:\n",
+    "        if res == DATA_6KM:\n",
+    "            thredds_data[DATA_6KM] = xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks})\n",
+    "        if res == DATA_2KM:\n",
+    "            thredds_data[DATA_2KM] = xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks})\n",
+    "        if res == DATA_1KM:\n",
+    "            thredds_data[DATA_1KM] = xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})"
    ]
   },
   {
@@ -156,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "netcdf_filename = \"current_netcdfs/west_coast_1km_hourly/tijuana_river_small.nc\"\n",
+    "netcdf_filename = \"current_netcdfs/west_coast_1km_hourly/tijuana_river_now.nc\"\n",
     "ds = xr.open_dataset(netcdf_filename)\n",
     "fs = xr_dataset_to_fieldset(ds)\n",
     "ds.close()\n",
