--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -70,9 +70,9 @@
     "#     \"parcels_configs/tijuana_simpterp.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
     "#     \"parcels_configs/tijuana_less.json\",\n",
-    "    \"parcels_configs/tijuana_small.json\",\n",
-    "    \"parcels_configs/tijuana_invdist_small.json\",\n",
+    "#     \"parcels_configs/tijuana_small.json\",\n",
     "#     \"parcels_configs/tijuana_smallreally.json\"\n",
+    "    \"parcels_configs/tijuana_now.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
