Tests with releasing particles just once

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -29,6 +29,7 @@
     "import json\n",
     "import math\n",
     "import os\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "import xarray as xr\n",
     "import numpy as np\n",
@@ -70,9 +71,8 @@
     "#     \"parcels_configs/tijuana_simpterp.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
     "#     \"parcels_configs/tijuana_less.json\",\n",
-    "#     \"parcels_configs/tijuana_small.json\",\n",
-    "#     \"parcels_configs/tijuana_smallreally.json\"\n",
-    "    \"parcels_configs/tijuana_now.json\",\n",
+    "#     \"parcels_configs/tijuana_now.json\",\n",
+    "    \"parcels_configs/tijuana_onerep.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
@@ -125,6 +125,10 @@
     "        runtime (float): seconds\n",
     "        dt (float): seconds\n",
     "    \"\"\"\n",
+    "    if len(data[\"pset\"]) == 0:\n",
+    "        print(\"ParticleSet is empty. Passing...\", file=sys.stderr)\n",
+    "        return\n",
+    "    \n",
     "    if save_snapshot:\n",
     "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
     "        field = None if ages else \"vector\"\n",
@@ -170,17 +174,19 @@
     "\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
-    "    repeat_dt = timedelta(seconds=cfg[\"repeat_dt\"]) # interval at which particles are released\n",
     "    cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"]) # particle spawns will be randomly chosen between these points\n",
     "    \n",
-    "    repetitions = math.floor(f[\"timerng_secs\"][1] / repeat_dt.total_seconds())\n",
+    "    if cfg[\"repeat_dt\"] < 0:\n",
+    "        repetitions = 1\n",
+    "    else:\n",
+    "        repetitions = math.floor(f[\"timerng_secs\"][1] / cfg[\"repeat_dt\"])\n",
     "    # the total number of particles that will exist in the simulation\n",
     "    total = repetitions * cfg[\"particles_per_dt\"]\n",
     "    lat_arr = np.zeros(total)\n",
     "    lon_arr = np.zeros(total)\n",
     "    time_arr = np.zeros(total)\n",
     "    for i in range(repetitions):\n",
-    "        time_arr[cfg[\"particles_per_dt\"] * i:cfg[\"particles_per_dt\"] * (i + 1)] = repeat_dt.total_seconds() * i\n",
+    "        time_arr[cfg[\"particles_per_dt\"] * i:cfg[\"particles_per_dt\"] * (i + 1)] = cfg[\"repeat_dt\"] * i\n",
     "\n",
     "    # randomly select spawn points from the given config\n",
     "    sp_lat = cfg[\"spawn_points\"].T[0][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
