Parcels config allows time range input

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -27,6 +27,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
@@ -90,8 +91,21 @@
     "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
     "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
     "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
-    "    (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(7, \"D\")), (32.528, 32.71), (-117.29, -117.11))\n",
+    "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11)),\n",
+    "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09)),\n",
+    "#     (\"tijuana_river_now\", DATA_6KM, get_latest_span(np.timedelta64(300, \"D\")), (32.35, 32.80), (-117.33, -116.9))\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lol 500 days is only like 100 megabytes, took me a good 20 minutes to download\n",
+    "\n",
+    "oh my god its even slower now what the fuck\n",
+    "\n",
+    "10 minutes for a 12 megabyte download are you serious"
    ]
   },
   {
@@ -148,11 +162,14 @@
    "outputs": [],
    "source": [
     "for r in regions:\n",
+    "    time_st = time.time()\n",
     "    save_dir = create_path(\"current_netcdfs/\" + filename_dict[r[\"category\"]])\n",
     "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
+    "    time_en = time.time()\n",
     "    print(f\"saved to {save_dir / filename}\")\n",
+    "    print(f\"time elapsed: {time_en - time_st}\")\n",
     "print(\"done\")"
    ]
   },
