--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -92,9 +92,27 @@
     "target = get_file_info(\"current_netcdfs/west_coast_1km_hourly/tijuana_river_now.nc\", 1, name=\"target\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/region0.nc\", 2, name=\"ref2km\"),\n",
-    "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/region0.nc\", 6, name=\"ref6km\")\n",
+    "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/tijuana_river_now.nc\", 2, name=\"ref2km\"),\n",
+    "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/tijuana_river_now.nc\", 6, name=\"ref6km\")\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targ_min = (target[\"lat\"][0], target[\"lon\"][0])\n",
+    "targ_max = (target[\"lat\"][-1], target[\"lon\"][-1])\n",
+    "for ir in interp_references:\n",
+    "    print(f\"checking {ir['name']}\")\n",
+    "    assert ir[\"lat\"][0] <= targ_min[0]\n",
+    "    assert ir[\"lon\"][0] <= targ_min[1]\n",
+    "    assert ir[\"lat\"][-1] >= targ_max[0]\n",
+    "    assert ir[\"lon\"][-1] >= targ_max[1]\n",
+    "    assert ir[\"timerng\"][0] <= target[\"timerng\"][0]\n",
+    "    assert ir[\"timerng\"][1] >= target[\"timerng\"][1]"
    ]
   },
   {
