--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -67,16 +67,25 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"parcels_configs/tijuana_lin.json\",\n",
-    "#     \"parcels_configs/tijuana_simpterp.json\",\n",
+    "    \"parcels_configs/tijuana_lin.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
     "#     \"parcels_configs/tijuana_less.json\",\n",
     "#     \"parcels_configs/tijuana_now.json\",\n",
-    "    \"parcels_configs/tijuana_onerep.json\",\n",
+    "#     \"parcels_configs/tijuana_onerep.json\",\n",
+    "#     \"parcels_configs/tijuana_range.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
     "files = [get_file_info(cfg[\"netcdf_path\"], cfg[\"resolution\"], name=cfg[\"name\"], parcels_cfg=cfg[\"parcels_config\"]) for cfg in loaded_configs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files[0][\"timerng\"]"
    ]
   },
   {
@@ -176,17 +185,33 @@
     "    cfg = f[\"cfg\"]\n",
     "    cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"]) # particle spawns will be randomly chosen between these points\n",
     "    \n",
+    "    if \"time_range\" not in cfg:\n",
+    "        t_start = f[\"timerng_secs\"][0]\n",
+    "        t_end = f[\"timerng_secs\"][1]\n",
+    "    else:\n",
+    "        if cfg[\"time_range\"][0] == \"START\":\n",
+    "            t_start = f[\"timerng_secs\"][0]\n",
+    "        else:\n",
+    "            t_start = np.datetime64(cfg[\"time_range\"][0])\n",
+    "            t_start = (t_start - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
+    "        if cfg[\"time_range\"][1] == \"END\":\n",
+    "            t_end = f[\"timerng_secs\"][1]\n",
+    "        else:\n",
+    "            t_end = np.datetime64(cfg[\"time_range\"][1])\n",
+    "            t_end = (t_end - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
     "    if cfg[\"repeat_dt\"] < 0:\n",
     "        repetitions = 1\n",
     "    else:\n",
-    "        repetitions = math.floor(f[\"timerng_secs\"][1] / cfg[\"repeat_dt\"])\n",
+    "        repetitions = int((t_end - t_start) / cfg[\"repeat_dt\"])\n",
+    "    cfg[\"sim_start_sec\"] = t_start\n",
+    "    cfg[\"sim_end_sec\"] = t_end\n",
     "    # the total number of particles that will exist in the simulation\n",
     "    total = repetitions * cfg[\"particles_per_dt\"]\n",
     "    lat_arr = np.zeros(total)\n",
     "    lon_arr = np.zeros(total)\n",
     "    time_arr = np.zeros(total)\n",
     "    for i in range(repetitions):\n",
-    "        time_arr[cfg[\"particles_per_dt\"] * i:cfg[\"particles_per_dt\"] * (i + 1)] = cfg[\"repeat_dt\"] * i\n",
+    "        time_arr[cfg[\"particles_per_dt\"] * i:cfg[\"particles_per_dt\"] * (i + 1)] = t_start + cfg[\"repeat_dt\"] * i\n",
     "\n",
     "    # randomly select spawn points from the given config\n",
     "    sp_lat = cfg[\"spawn_points\"].T[0][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
@@ -231,12 +256,15 @@
     "# setting up times, intervals, and paths for simulation\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
-    "    cfg[\"snap_num\"] = math.floor((f[\"timerng_secs\"][1] - f[\"timerng_secs\"][0]) / cfg[\"snapshot_interval\"])\n",
-    "    cfg[\"last_int\"] = f[\"timerng_secs\"][1] - cfg[\"snap_num\"] * cfg[\"snapshot_interval\"]\n",
+    "    cfg[\"snap_num\"] = math.floor((cfg[\"sim_end_sec\"] - cfg[\"sim_start_sec\"]) / cfg[\"snapshot_interval\"])\n",
+    "    cfg[\"last_int\"] = cfg[\"sim_end_sec\"] - (cfg[\"snap_num\"] * cfg[\"snapshot_interval\"] + cfg[\"sim_start_sec\"])\n",
     "    if cfg[\"last_int\"] == 0:\n",
+    "        print(\"No last interval exists.\")\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 1}\")\n",
     "    else:\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
+    "    if cfg[\"snap_num\"] >= 200:\n",
+    "        raise Exception(\"Too many snapshots.\")\n",
     "    f[\"snap_path\"] = create_path(f\"snapshots/{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
     "    # only clear directory if desired or actually saving images\n",
